[tool.poetry]
name = "diamond"
version = "0"
description = "The metadata enabled wiki engine"
authors = [
  "Benoit Myard <benoit@myard.xyz>"
]
license = "GPL"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Office/Business :: Groupware",
  "Topic :: Text Processing :: Markup"
]

[tool.poetry.scripts]
diamond = "diamond.main:main"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
bcrypt = "^4.1.2"
celery = "^5.3.6"
click = "^8.1.7"
flask = "^3.0.2"
flask-babel = "^4.0.0"
flask-login = "^0.6.3"
flask-mail = "^0.9.1"
flask-migrate = "^4.0.7"
flask-redis = "^0.4.0"
flask-script = "^2.0.6"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^21.2.0"
markdown = "^3.6"
markupsafe = "^2.1.5"
psycopg2 = "^2.9.9"
python-editor = "^1.0.4"
python-slugify = "^8.0.4"
redis = "^5.0.3"
python-dotenv = "^1.0.1"
mockredispy = "^2.9.3"
pygments = "^2.17.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cache = "^1.0"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-flake8 = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
